# renewable-energy-storage-cost

./: .gitignore  README.md  pyproject.toml
renewable_cost/: __init__.py  costdata.py  costs.py  elexon.py  main.py  nationalgrid.py  plot.py  sheffield.py
renewable_cost/data/: elexon_demand_hourly_2021.pkl  elexon_demand_hourly_2022.pkl  generation_all_fuels_daily_2021.pkl  generation_all_fuels_daily_2022.pkl  sheffield_solar_half_hourly_2021.pkl  sheffield_solar_half_hourly_2022.pkl
tests/: test_lcoe.py
